# dmpbbo

./: .gitignore  CMakeLists.txt
demos/python/dmps/: demo_dmp.py
dmpbbo/dmps/: CartDmp.py
dmpbbo/functionapproximators/: FunctionApproximatorRBFNrot.py  FunctionApproximatorWLS.py
examples/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
examples/catkin_ws/src/CDMP_test/: cdmp_test.json  demo_dmp.py
examples/catkin_ws/src/reaching_task/: .gitignore  TaskReach.py  automatic_search_equidistant_weights.bash  automatic_search_stab_weight.bash  calculate_midpoint.py  cost_analysis.ipynb  demo_robot.bash  filters.py  meta_learning.py  robotExecuteDmpReaching.py  robot_data_analysis.ipynb  run_one_learning.bash  step1_train_dmp_from_trajectory_file.py  step2_define_task.py  step3_tune_exploration.py  step4_prepare_optimization.py  step5_one_optimization_update.py
examples/catkin_ws/src/reaching_task_cart/: .gitignore  TaskReach.py  TaskReach__.py  commands.txt  cost_analysis.ipynb  cost_vars.txt  demo_robot.bash  plot_results.ipynb  plot_results.py  robotExecuteDmpReaching.cpp  robotExecuteDmpReaching.hpp  robotExecuteDmpReaching.py  step1_train_dmp_from_trajectory_file.py  step2_define_task.py  step3_tune_exploration.py  step4_prepare_optimization.py  step5_one_optimization_update.py
examples/catkin_ws/src/reaching_task_robot/: CMakeLists.txt  TaskReach.py  TaskReach_.py  demo_robot.bash  plot_results.ipynb  plot_results.py  robotExecuteDmpReaching.py  step2_defineTask.py  step2_define_task.py  step3_tune_exploration.py  step4_prepare_optimization.py
(+24 files in other folders)
